--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-330.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-557.5KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-310.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-8.31MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇬🇧 英国-409.5KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-527.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇭🇰 香港-323.5KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1011.4KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-12.79MB/s(Youtube:不良林), server: cm1.jflashfal.xyz, port: 18353, type: ssr, cipher: chacha20-ietf, password: DXpeG4IEEFY5LQyw, protocol: auth_aes128_sha1, obfs: plain, protocol-param: 1096:JkH9mOx9dKnolmwg, obfs-param: 3c55e1096.microsoft.com}
   - {name: 🇺🇸 美国-919.8KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
@@ -21,12 +16,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -36,12 +26,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -52,12 +37,7 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -66,18 +46,14 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -87,12 +63,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -103,12 +74,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
@@ -128,12 +94,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-330.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.31MB/s(Youtube:不良林)
-      - 🇬🇧 英国-409.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-12.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
