--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-11.20MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇭🇰 香港-323.5KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-919.8KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-370.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.17MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇬🇧 英国-1.59MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.33MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-323.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-919.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-370.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.17MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
