--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-464.8KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇨🇦 加拿大-433.8KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇯🇵 日本-3.84MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-950.2KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.08MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-464.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-433.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
