--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -9,6 +9,7 @@ proxies:
   - {name: 🇯🇵 日本-3.84MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-950.2KB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.08MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -19,6 +20,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,6 +30,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,6 +41,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,6 +56,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -61,6 +66,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -71,6 +77,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -90,6 +97,7 @@ proxy-groups:
       - 🇯🇵 日本-3.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-950.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.08MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
