--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林), server: 185.167.116.252, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-691.2KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-460.3KB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQ7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-3.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
