--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,8 +6,8 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇦 加拿大-691.2KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-460.3KB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQ7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇮🇳 印度-1.40MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇰🇷 韩国-3.84MB/s(Youtube:不良林), server: 52.79.164.73, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -15,16 +15,16 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -32,8 +32,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -45,16 +45,16 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -62,8 +62,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,8 +80,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-460.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
