--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-691.2KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇮🇳 印度-1.40MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇰🇷 韩国-3.84MB/s(Youtube:不良林), server: 52.79.164.73, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-475.1KB/s(Youtube:不良林), server: x.mceee.xyz, port: 26031, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: hkaz3.xmrth-node.xyz, port: 14138, type: vmess, uuid: 6f0349b2-7484-3b32-98a5-04f3a857dde0, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz3.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-726.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-964.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-691.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.40MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-475.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-726.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-964.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
